bug fix for topic textarea has no scrollbar with more content

--- a/css/source/main.scss
+++ b/css/source/main.scss
@@ -465,6 +465,10 @@ p {
   }
 }
 
+.post-content-box {
+  overflow:auto;
+}
+
 .title {
   text-align: left;
   font-weight: normal;
